fix: Fix swagger and show by uuid
